--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -26,7 +26,7 @@ body {
 }
 
 #banner {
-  background: url("/images/banner-bg.jpg");
+  background: url("https://images.unsplash.com/photo-1480506132288-68f7705954bd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
   background-size: cover;
   width: 100%;
   height: 100vh;
