--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -64,7 +64,6 @@ body
                 
 .banner-content
     // background-color: red
-    width: 25%
     position: absolute
     left: 50%
     top: 50%
@@ -188,10 +187,14 @@ body
                         background-color: $secondary
                         color: white
 
+//################################
+//   BEGINNING OF ABOUT STYLES
+//################################
+
 #about
     background-color: $primary
     width: 100%
-    height: 60vh
+    height: 100vh
     .section-title
         color: white
         display: inline-block
@@ -222,11 +225,12 @@ body
                     margin: 10px 15px
                     color: white
 
-
+//################################
+//   BEGINNING OF SKILLS STYLES
+//################################
 
 #skills
     width: 100%
-    height: 50vh
     color: $secondary
     .skill-container
         width: 100%
