--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -232,7 +232,7 @@ body
 #skills
     width: 100%
     color: $secondary
-    .skill-container
+    #skill-container
         width: 100%
         height: 500px
         display: flex
