--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,168 +1,111 @@
 html {
-  scroll-behavior: smooth;
-}
+  scroll-behavior: smooth; }
 
 * {
   padding: 0;
   margin: 0;
   font-family: "Roboto", sans-serif;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 body {
   width: 100%;
-  height: 100%;
-}
+  height: 100%; }
 
 .container {
   width: 1100px;
-  margin: 0 auto;
-}
+  margin: 0 auto; }
 
 .btn {
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); }
 
 #banner {
   background: url("https://images.unsplash.com/photo-1480506132288-68f7705954bd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
   background-size: cover;
   width: 100%;
   height: 100vh;
-  position: relative;
-}
-
-#banner .overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: #2C3E50;
-  opacity: .4;
-}
+  position: relative; }
+  #banner .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #2C3E50;
+    opacity: .4; }
 
 #menu {
   padding-top: 30px;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-#menu h1 {
-  font-size: 30px;
-  color: white;
-  font-family: "Roboto", sans-serif;
-  font-weight: 300;
-}
-
-#menu h1 .lastname {
-  color: #16a085;
-}
-
-#menu ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: flex;
-      -ms-flex-pack: flex;
-          justify-content: flex;
-  line-height: 40px;
-}
-
-#menu ul li {
-  list-style: none;
-  margin-right: 45px;
-}
-
-#menu ul li a {
-  color: white;
-  text-decoration: none;
-}
-
-#menu ul li:last-child a {
-  color: #16a085;
-  font-family: "Passero One", cursive;
-  font-size: 25px;
-}
+  justify-content: space-between; }
+  #menu h1 {
+    font-size: 30px;
+    color: white;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300; }
+    #menu h1 .lastname {
+      color: #16a085; }
+  #menu ul {
+    display: flex;
+    line-height: 40px; }
+    #menu ul li {
+      list-style: none;
+      margin-right: 45px; }
+      #menu ul li a {
+        color: white;
+        text-decoration: none; }
+      #menu ul li:last-child a {
+        color: #16a085;
+        font-family: "Passero One", cursive;
+        font-size: 25px; }
 
 .banner-content {
   position: absolute;
   left: 50%;
   top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-.banner-content .title {
-  color: #16a085;
-  font-weight: 100;
-  text-align: center;
-  font-size: 25px;
-  margin-bottom: 26px;
-}
-
-.banner-content p {
-  color: white;
-  text-align: center;
-  margin-bottom: 40px;
-}
-
-.banner-content .banner-buttons {
-  text-align: center;
-  width: 100%;
-}
-
-.banner-content .banner-buttons a {
-  display: inline-block;
-  text-decoration: none;
-  text-align: center;
-  padding: 15px 47px;
-  border-radius: 5px;
-  color: white;
-}
-
-.banner-content .banner-buttons .btn {
-  background-color: #16a085;
-  text-transform: uppercase;
-  margin-right: 25px;
-}
-
-.banner-content .banner-buttons .btn-outline {
-  padding: 15px 0;
-  width: 200px;
-  border-radius: 5px;
-  border: 2px solid white;
-  margin-left: 25px;
-  -webkit-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-}
-
-.banner-content .banner-buttons .btn-outline:hover {
-  background-color: white;
-  color: #16a085;
-}
-
-.banner-content .social-banner {
-  text-align: center;
-  font-size: 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  width: 300px;
-  margin: 35px auto;
-}
-
-.banner-content .social-banner a {
-  text-decoration: none;
-  color: white;
-}
+  transform: translate(-50%, -50%); }
+  .banner-content .title {
+    color: #16a085;
+    font-weight: 100;
+    text-align: center;
+    font-size: 25px;
+    margin-bottom: 26px; }
+  .banner-content p {
+    color: white;
+    text-align: center;
+    margin-bottom: 40px; }
+  .banner-content .banner-buttons {
+    text-align: center;
+    width: 100%; }
+    .banner-content .banner-buttons a {
+      display: inline-block;
+      text-decoration: none;
+      text-align: center;
+      padding: 15px 47px;
+      border-radius: 5px;
+      color: white; }
+    .banner-content .banner-buttons .btn {
+      background-color: #16a085;
+      text-transform: uppercase;
+      margin-right: 25px; }
+    .banner-content .banner-buttons .btn-outline {
+      padding: 15px 0;
+      width: 200px;
+      border-radius: 5px;
+      border: 2px solid white;
+      margin-left: 25px;
+      transition: .5s ease-in-out; }
+      .banner-content .banner-buttons .btn-outline:hover {
+        background-color: white;
+        color: #16a085; }
+  .banner-content .social-banner {
+    text-align: center;
+    font-size: 40px;
+    display: flex;
+    justify-content: space-between;
+    width: 300px;
+    margin: 35px auto; }
+    .banner-content .social-banner a {
+      text-decoration: none;
+      color: white; }
 
 .arrows .fas {
   color: white;
@@ -170,235 +113,175 @@ body {
   position: absolute;
   left: 50%;
   bottom: 30px;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-}
+  transform: translateX(-50%); }
 
 .section-title {
   color: #16a085;
   font-size: 40px;
   font-family: "Passero One", cursive;
-  margin: 30px 0;
-}
+  margin: 30px 0; }
 
 #projects {
-  width: 100%;
-}
-
-#projects .project-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 60px;
-}
-
-#projects .project-container img {
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  width: 650px;
-  height: 410px;
-}
-
-#projects .project-container .project-info {
-  margin-left: 30px;
-}
-
-#projects .project-container .project-info h3 {
-  color: #16a085;
-  font-family: "Passero One", cursive;
-  font-size: 35px;
-  margin-bottom: 17px;
-}
-
-#projects .project-container .project-info .tech-stack {
-  margin-bottom: 17px;
-  font-size: 25px;
-}
-
-#projects .project-container .project-info .tech-stack i {
-  margin-right: 30px;
-}
-
-#projects .project-container .project-info p {
-  color: #2C3E50;
-  margin-bottom: 40px;
-}
-
-#projects .project-container .project-info .project-buttons {
-  width: 100%;
-}
-
-#projects .project-container .project-info .project-buttons .btn {
-  margin-right: 30px;
-  display: inline-block;
-  color: white;
-  background-color: #16a085;
-  text-decoration: none;
-  text-transform: uppercase;
-  width: 180px;
-  padding: 15px 0;
-  text-align: center;
-}
-
-#projects .project-container .project-info .project-buttons .btn-outline {
-  display: inline-block;
-  width: 180px;
-  border: 2px solid #2C3E50;
-  padding: 15px 0;
-  text-align: center;
-  text-decoration: none;
-  color: #2C3E50;
-  -webkit-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-}
-
-#projects .project-container .project-info .project-buttons .btn-outline:hover {
-  background-color: #2C3E50;
-  color: white;
-}
+  width: 100%; }
+  #projects .project-container {
+    display: flex;
+    margin-bottom: 60px; }
+    #projects .project-container img {
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      width: 650px;
+      height: 410px; }
+    #projects .project-container .project-info {
+      margin-left: 30px; }
+      #projects .project-container .project-info h3 {
+        color: #16a085;
+        font-family: "Passero One", cursive;
+        font-size: 35px;
+        margin-bottom: 17px; }
+      #projects .project-container .project-info .tech-stack {
+        margin-bottom: 17px;
+        font-size: 25px; }
+        #projects .project-container .project-info .tech-stack i {
+          margin-right: 30px; }
+      #projects .project-container .project-info p {
+        color: #2C3E50;
+        margin-bottom: 40px; }
+      #projects .project-container .project-info .project-buttons {
+        width: 100%; }
+        #projects .project-container .project-info .project-buttons .btn {
+          margin-right: 30px;
+          display: inline-block;
+          color: white;
+          background-color: #16a085;
+          text-decoration: none;
+          text-transform: uppercase;
+          width: 180px;
+          padding: 15px 0;
+          text-align: center; }
+        #projects .project-container .project-info .project-buttons .btn-outline {
+          display: inline-block;
+          width: 180px;
+          border: 2px solid #2C3E50;
+          padding: 15px 0;
+          text-align: center;
+          text-decoration: none;
+          color: #2C3E50;
+          transition: .5s ease-in-out; }
+          #projects .project-container .project-info .project-buttons .btn-outline:hover {
+            background-color: #2C3E50;
+            color: white; }
 
 #about {
   background-color: #16a085;
   width: 100%;
-  height: 100vh;
-}
-
-#about .section-title {
-  color: white;
-  display: inline-block;
-}
-
-#about .about-me {
-  width: 575px;
-  text-align: center;
-  margin: 20px auto 0;
-  color: white;
-}
-
-#about .about-me h1 {
-  font-size: 40px;
-  margin-bottom: 25px;
-  font-weight: 100;
-}
-
-#about .about-me p {
-  line-height: 19px;
-  font-weight: 100;
-}
-
-#about .about-me .social-media {
-  margin-top: 20px;
-}
-
-#about .about-me .social-media h4 {
-  font-size: 25px;
-}
-
-#about .about-me .social-media .social-icons {
-  border: 2px solid white;
-  width: 50%;
-  margin: 0 auto;
-  margin-top: 10px;
-}
-
-#about .about-me .social-media .social-icons i {
-  font-size: 25px;
-  display: inline-block;
-  margin: 10px 15px;
-  color: white;
-}
+  padding-bottom: 200px; }
+  #about .section-title {
+    color: white;
+    display: inline-block; }
+  #about .about-me {
+    width: 575px;
+    text-align: center;
+    margin: 20px auto 0;
+    color: white; }
+    #about .about-me h1 {
+      font-size: 40px;
+      margin-bottom: 25px;
+      font-weight: 100; }
+    #about .about-me p {
+      line-height: 19px;
+      font-weight: 100; }
+    #about .about-me .social-media {
+      margin-top: 20px; }
+      #about .about-me .social-media h4 {
+        font-size: 25px; }
+      #about .about-me .social-media .social-icons {
+        border: 2px solid white;
+        width: 50%;
+        margin: 0 auto;
+        margin-top: 10px; }
+        #about .about-me .social-media .social-icons i {
+          font-size: 25px;
+          display: inline-block;
+          margin: 10px 15px;
+          color: white; }
 
 #skills {
   width: 100%;
-  color: #2C3E50;
-}
-
-#skills #skill-container {
-  width: 100%;
-  height: 500px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  -webkit-transform: translateY(-100px);
-          transform: translateY(-100px);
-  border-radius: 20px;
-}
-
-#skills #skill-container .box {
-  text-align: center;
-}
-
-#skills #skill-container .box h3 {
-  margin: 50px 0;
-}
-
-#skills #skill-container .box ul li {
-  list-style-type: none;
-  line-height: 35px;
-}
-
-#skills #skill-container .main-box {
-  background-color: #2C3E50;
-  width: 500px;
-  color: white;
-}
-
-#skills #skill-container .side-box {
-  width: 364px;
-  background-color: #fff;
-}
-
-#skills #skill-container .left {
-  border-radius: 20px 0 0 20px;
-}
-
-#skills #skill-container .right {
-  border-radius: 0 20px 20px 0;
-}
+  color: #2C3E50; }
+  #skills #skill-container {
+    width: 100%;
+    height: 500px;
+    display: flex;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    transform: translateY(-100px);
+    border-radius: 20px; }
+    #skills #skill-container .box {
+      text-align: center; }
+      #skills #skill-container .box h3 {
+        margin: 50px 0; }
+      #skills #skill-container .box ul li {
+        list-style-type: none;
+        line-height: 35px; }
+    #skills #skill-container .main-box {
+      background-color: #2C3E50;
+      width: 500px;
+      color: white; }
+    #skills #skill-container .side-box {
+      width: 364px;
+      background-color: #fff; }
+    #skills #skill-container .left {
+      border-radius: 20px 0 0 20px; }
+    #skills #skill-container .right {
+      border-radius: 0 20px 20px 0; }
 
 #contact {
   width: 100%;
   height: 100vh;
   background-color: #2C3E50;
-  position: relative;
-}
-
-#contact .email-btn {
-  text-decoration: none;
-  display: inline-block;
-  text-align: center;
-  padding: 36px 92px;
-  text-transform: uppercase;
-  font-weight: bold;
-  border-radius: 10px;
-  background-color: #fff;
-  color: #2C3E50;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
+  position: relative; }
+  #contact .email-btn {
+    text-decoration: none;
+    display: inline-block;
+    text-align: center;
+    padding: 36px 92px;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: 10px;
+    background-color: #fff;
+    color: #2C3E50;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%); }
 
 .fa-laravel {
-  color: #F05340;
-}
+  color: #F05340; }
 
 .fa-html5 {
-  color: #F16529;
-}
+  color: #F16529; }
 
 .fa-css3-alt {
-  color: #264de4;
-}
+  color: #264de4; }
 
 .fa-bootstrap {
-  color: #602C50;
-}
+  color: #602C50; }
 
 .fa-sass {
-  color: #cd6799;
-}
-/*# sourceMappingURL=main.css.map */
+  color: #cd6799; }
+
+@media screen and (max-width: 1320px) {
+  .container {
+    width: 80%; }
+  #projects .project-container {
+    flex-direction: column;
+    align-items: center; }
+    #projects .project-container img {
+      width: 80%;
+      height: 80%;
+      margin-bottom: 20px; }
+    #projects .project-container .project-info {
+      text-align: center;
+      width: 80%; }
+  #projects .bottom img {
+    order: 0; }
+  #projects .bottom .project-info {
+    order: 1; } }
