--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -143,49 +143,63 @@ body {
 #projects .project:nth-child(odd) .project-img {
   order: 2; }
 
-#projects {
-  height: 1000px; }
-  #projects .project {
-    display: flex;
-    margin-bottom: 50px; }
-    #projects .project .project-img {
-      flex: 1; }
-      #projects .project .project-img img {
-        width: 100%;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); }
-    #projects .project .project-details {
-      flex: 1;
-      margin-left: 20px; }
-      #projects .project .project-details h2 {
-        font-family: "Passero One", cursive;
-        font-size: 2em;
-        color: #16a085; }
-      #projects .project .project-details .tech-stack-icons {
-        display: flex;
-        justify-content: flex-start;
-        padding: 2em 0; }
-        #projects .project .project-details .tech-stack-icons i {
-          margin-right: 30px;
-          font-size: 1.5em; }
-      #projects .project .project-details p {
-        line-height: 1.5;
-        margin-bottom: 20px; }
-      #projects .project .project-details .project-buttons {
-        margin-top: 50px;
-        display: flex; }
-        #projects .project .project-details .project-buttons a:first-child {
-          margin-right: 50px; }
+#projects .project {
+  display: flex;
+  margin-bottom: 50px; }
+  #projects .project .project-img {
+    flex: 1; }
+    #projects .project .project-img img {
+      width: 100%;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); }
+  #projects .project .project-details {
+    flex: 1;
+    margin-left: 20px; }
+    #projects .project .project-details h2 {
+      font-family: "Passero One", cursive;
+      font-size: 2em;
+      color: #16a085; }
+    #projects .project .project-details .tech-stack-icons {
+      display: flex;
+      justify-content: flex-start;
+      padding: 2em 0; }
+      #projects .project .project-details .tech-stack-icons i {
+        margin-right: 30px;
+        font-size: 1.5em; }
+    #projects .project .project-details p {
+      line-height: 1.5;
+      margin-bottom: 20px; }
+    #projects .project .project-details .project-buttons {
+      margin-top: 50px;
+      display: flex; }
+      #projects .project .project-details .project-buttons a:first-child {
+        margin-right: 50px; }
 
 @media screen and (max-width: 1024px) {
   #banner header {
     flex-direction: column;
     margin-bottom: 50px; }
-    #banner header nav ul {
-      flex-direction: column; }
-      #banner header nav ul li {
-        width: 100%;
+    #banner header nav {
+      width: 100%;
+      flex-direction: column;
+      width: 100%; }
+      #banner header nav li {
         text-align: center;
-        margin-bottom: 30px; }
+        padding: 1em;
+        background-color: #16a085; }
+        #banner header nav li:last-child {
+          background-color: #2C3E50; }
+          #banner header nav li:last-child a {
+            background-color: #2C3E50;
+            border-radius: 0px;
+            transition: none;
+            width: 100px;
+            height: auto;
+            box-shadow: none;
+            text-align: center;
+            line-height: 1;
+            text-decoration: none;
+            text-transform: uppercase;
+            letter-spacing: 0; }
     #banner header h1 {
       font-size: 1.3em;
       padding-top: 1.5em;
