--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -86,52 +86,57 @@ body {
     height: 100%;
     background-color: #2C3E50;
     opacity: .5; }
-  #banner header {
-    padding-top: 50px;
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
-    margin-bottom: 250px; }
-    #banner header > h1 {
-      text-transform: uppercase;
-      letter-spacing: 4px; }
-      #banner header > h1 span {
-        color: #16a085; }
-    #banner header nav {
-      width: 50%; }
-      #banner header nav ul {
-        display: flex;
-        list-style-type: none;
-        justify-content: space-evenly;
-        align-items: center; }
-      #banner header nav a {
-        color: white;
-        text-decoration: none; }
-  #banner .banner-content {
-    text-align: center;
-    color: white; }
-    #banner .banner-content .info-text {
-      width: 50%;
-      margin: 50px auto; }
-      #banner .banner-content .info-text h1 {
-        margin-bottom: 20px;
-        color: #16a085; }
-    #banner .banner-content .buttons {
-      width: 50%;
-      margin: 0 auto;
+
+header {
+  padding-top: 50px;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  margin-bottom: 250px; }
+  header > h1 {
+    text-transform: uppercase;
+    letter-spacing: 4px; }
+    header > h1 span {
+      color: #16a085; }
+  header nav {
+    width: 50%; }
+    header nav ul {
       display: flex;
+      list-style-type: none;
       justify-content: space-evenly;
-      margin-bottom: 50px; }
-    #banner .banner-content .social-icons {
-      display: flex;
-      width: 50%;
-      margin: 0 auto;
-      justify-content: space-evenly; }
-      #banner .banner-content .social-icons a {
-        color: white;
-        font-size: 2em; }
+      align-items: center; }
+    header nav a {
+      color: white;
+      text-decoration: none; }
+
+.banner-content {
+  text-align: center;
+  color: white; }
+
+.info-text {
+  width: 50%;
+  margin: 50px auto; }
+  .info-text h1 {
+    margin-bottom: 20px;
+    color: #16a085; }
+
+.buttons {
+  width: 50%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 50px; }
+
+.social-icons {
+  display: flex;
+  width: 50%;
+  margin: 0 auto;
+  justify-content: space-evenly; }
+  .social-icons a {
+    color: white;
+    font-size: 2em; }
 
 #projects .project:nth-child(odd) .project-details {
   order: 1;
@@ -175,24 +180,29 @@ body {
         margin-right: 50px; }
 
 @media screen and (max-width: 1024px) {
+  #banner .container {
+    width: 100%; }
   #banner header {
     flex-direction: column;
     margin-bottom: 50px; }
     #banner header nav {
-      width: 100%;
-      flex-direction: column;
       width: 100%; }
-      #banner header nav li {
+    #banner header ul {
+      flex-direction: column; }
+      #banner header ul li {
         text-align: center;
-        padding: 1em;
-        background-color: #16a085; }
-        #banner header nav li:last-child {
+        width: 100%; }
+        #banner header ul li a {
+          width: 100%;
+          display: block;
+          background-color: #16a085;
+          padding: 1em; }
+        #banner header ul li:last-child {
           background-color: #2C3E50; }
-          #banner header nav li:last-child a {
+          #banner header ul li:last-child a {
             background-color: #2C3E50;
             border-radius: 0px;
             transition: none;
-            width: 100px;
             height: auto;
             box-shadow: none;
             text-align: center;
@@ -200,10 +210,10 @@ body {
             text-decoration: none;
             text-transform: uppercase;
             letter-spacing: 0; }
-    #banner header h1 {
-      font-size: 1.3em;
-      padding-top: 1.5em;
-      margin-bottom: 20px; }
+  #banner h1 {
+    font-size: 1.3em;
+    padding-top: 1.5em;
+    margin-bottom: 20px; }
   .banner-content h1 {
     font-size: 1.5em;
     text-transform: uppercase; }
