--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -98,62 +98,62 @@ body
     opacity: .5
 
 
-  header
-    padding-top: 50px
-    display: flex
-    width: 100%
-    justify-content: space-between
-    align-items: center
-    color: white
-    margin-bottom: 250px
+header
+  padding-top: 50px
+  display: flex
+  width: 100%
+  justify-content: space-between
+  align-items: center
+  color: white
+  margin-bottom: 250px
 
-    > h1
-      text-transform: uppercase
-      letter-spacing: 4px
+  > h1
+    text-transform: uppercase
+    letter-spacing: 4px
 
-      span
-        color: $primary
+    span
+      color: $primary
 
-    nav
-      width: 50%
+  nav
+    width: 50%
 
-      ul
-        display: flex
-        list-style-type: none
-        justify-content: space-evenly
-        align-items: center
-
-      a
-        color: white
-        text-decoration: none
-
-  .banner-content
-    text-align: center
-    color: white
-
-    .info-text
-      width: 50%
-      margin: 50px auto
-
-      h1
-        margin-bottom: 20px
-        color: $primary
-
-    .buttons
-      width: 50%
-      margin: 0 auto
+    ul
       display: flex
+      list-style-type: none
       justify-content: space-evenly
-      margin-bottom: 50px
-    .social-icons
-      display: flex
-      width: 50%
-      margin: 0 auto
-      justify-content: space-evenly
-      a
-        color: white
+      align-items: center
 
-        font-size: 2em
+    a
+      color: white
+      text-decoration: none
+
+.banner-content
+  text-align: center
+  color: white
+
+.info-text
+  width: 50%
+  margin: 50px auto
+
+  h1
+    margin-bottom: 20px
+    color: $primary
+
+.buttons
+  width: 50%
+  margin: 0 auto
+  display: flex
+  justify-content: space-evenly
+  margin-bottom: 50px
+.social-icons
+  display: flex
+  width: 50%
+  margin: 0 auto
+  justify-content: space-evenly
+  a
+    color: white
+
+    font-size: 2em
 
 
 //Reverse order of projects.
@@ -201,32 +201,37 @@ body
         a:first-child
           margin-right: 50px
 @media screen and (max-width: 1024px)
-  #banner header
-    flex-direction: column
-    margin-bottom: 50px
-    nav
+  #banner
+    .container
       width: 100%
-      ul
+    header
       flex-direction: column
-      width: 100%
-      li
-        text-align: center
-        padding: 1em
-        background-color: $primary
-        &:last-child
-          background-color: $secondary
+      margin-bottom: 50px
+      nav
+        width: 100%
+      ul
+        flex-direction: column
+        li
+          text-align: center
+          width: 100%
           a
+            width: 100%
+            display: block
+            background-color: $primary
+            padding: 1em
+          &:last-child
             background-color: $secondary
-            border-radius: 0px
-            transition: none
-            width: 100px
-            height: auto
-            box-shadow: none
-            text-align: center
-            line-height: 1
-            text-decoration: none
-            text-transform: uppercase
-            letter-spacing: 0
+            a
+              background-color: $secondary
+              border-radius: 0px
+              transition: none
+              height: auto
+              box-shadow: none
+              text-align: center
+              line-height: 1
+              text-decoration: none
+              text-transform: uppercase
+              letter-spacing: 0
 
     h1
       font-size: 1.3em
