--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -201,37 +201,37 @@ header
         a:first-child
           margin-right: 50px
 @media screen and (max-width: 1024px)
-  #banner
-    .container
-      width: 100%
-    header
-      flex-direction: column
-      margin-bottom: 50px
-      nav
-        width: 100%
-      ul
-        flex-direction: column
-        li
-          text-align: center
-          width: 100%
-          a
-            width: 100%
-            display: block
-            background-color: $primary
-            padding: 1em
-          &:last-child
-            background-color: $secondary
-            a
-              background-color: $secondary
-              border-radius: 0px
-              transition: none
-              height: auto
-              box-shadow: none
-              text-align: center
-              line-height: 1
-              text-decoration: none
-              text-transform: uppercase
-              letter-spacing: 0
+  //#banner
+  //  .container
+  //    width: 100%
+  //  header
+  //    flex-direction: column
+  //    margin-bottom: 50px
+  //    nav
+  //      width: 100%
+  //    ul
+  //      flex-direction: column
+  //      li
+  //        text-align: center
+  //        width: 100%
+  //        a
+  //          width: 100%
+  //          display: block
+  //          background-color: $primary
+  //          padding: 1em
+  //        &:last-child
+  //          background-color: $secondary
+  //          a
+  //            background-color: $secondary
+  //            border-radius: 0px
+  //            transition: none
+  //            height: auto
+  //            box-shadow: none
+  //            text-align: center
+  //            line-height: 1
+  //            text-decoration: none
+  //            text-transform: uppercase
+  //            letter-spacing: 0
 
     h1
       font-size: 1.3em
