--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -181,7 +181,8 @@ header {
 
 #about-me {
   background-color: #16a085;
-  color: white; }
+  color: white;
+  height: 700px; }
   #about-me .about-me-text {
     width: 80%;
     margin: 0 auto;
@@ -190,12 +191,43 @@ header {
       margin-bottom: 20px;
       text-transform: uppercase; }
     #about-me .about-me-text h4 {
-      font-size: 1.5rem; }
+      font-size: 1.5rem;
+      margin: 30px 0; }
   #about-me .section-title {
     color: white;
     padding-top: 30px; }
 
+#skills-section .skills-container {
+  display: flex; }
+  #skills-section .skills-container .front-end, #skills-section .skills-container .other, #skills-section .skills-container .backend {
+    text-align: center;
+    margin-top: -100px;
+    padding: 2em;
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); }
+    #skills-section .skills-container .front-end ul, #skills-section .skills-container .other ul, #skills-section .skills-container .backend ul {
+      list-style-type: none;
+      line-height: 3; }
+    #skills-section .skills-container .front-end h3, #skills-section .skills-container .other h3, #skills-section .skills-container .backend h3 {
+      font-size: 1.5em;
+      margin-bottom: 50px; }
+  #skills-section .skills-container .front-end, #skills-section .skills-container .other {
+    flex: 1;
+    background-color: white; }
+  #skills-section .skills-container .front-end {
+    margin-right: -30px; }
+  #skills-section .skills-container .other {
+    margin-left: -30px; }
+  #skills-section .skills-container .backend {
+    z-index: 1;
+    background-color: #2C3E50;
+    flex: 2;
+    color: white;
+    margin-top: -150px; }
+
 @media screen and (max-width: 1024px) {
+  .section-title {
+    text-align: center; }
   #banner .container {
     width: 100%; }
   #banner header {
