--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -206,6 +206,7 @@ header
 #about-me
   background-color: $primary
   color: white
+  height: 700px
   .about-me-text
     width: 80%
     margin: 0 auto
@@ -215,11 +216,46 @@ header
       text-transform: uppercase
     h4
       font-size: 1.5rem
+      margin: 30px 0
 
   .section-title
     color: white
     padding-top: 30px
+
+#skills-section
+  .skills-container
+    display: flex
+    .front-end, .other, .backend
+      text-align: center
+      margin-top: -100px
+      padding: 2em
+      border-radius: 10px
+      box-shadow: $shadow
+      ul
+        list-style-type: none
+        line-height: 3
+      h3
+        font-size: 1.5em
+
+        margin-bottom: 50px
+    .front-end, .other
+      flex: 1
+      background-color: white
+    .front-end
+      margin-right: -30px
+    .other
+      margin-left: -30px
+    .backend
+      z-index: 1
+      background-color: $secondary
+      flex: 2
+      color: white
+      margin-top: -150px
+
+
 @media screen and (max-width: 1024px)
+  .section-title
+    text-align: center
   #banner
     .container
       width: 100%
