added responsivnes to skills container

--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -318,8 +318,14 @@ header
         order: 2
       .project-img
         order: 1
-
-
+  #skills-section
+    .skills-container
+      flex-direction: column
+      .backend, .front-end, .other
+        margin: 0
+        -webkit-border-radius: 0
+        -moz-border-radius: 0
+        border-radius: 0
 
 .fa-laravel
   color: #F05340
