--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -5,6 +5,9 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
+html {
+  scroll-behavior: smooth; }
+
 /*GENERAL STYLING*/
 .burger {
   width: 40px;
@@ -182,7 +185,7 @@ header {
 #about-me {
   background-color: #16a085;
   color: white;
-  height: 700px; }
+  height: 100vh; }
   #about-me .about-me-text {
     width: 80%;
     margin: 0 auto;
@@ -201,7 +204,7 @@ header {
   display: flex; }
   #skills-section .skills-container .front-end, #skills-section .skills-container .other, #skills-section .skills-container .backend {
     text-align: center;
-    margin-top: -100px;
+    margin-top: -300px;
     padding: 2em;
     border-radius: 10px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); }
@@ -223,7 +226,30 @@ header {
     background-color: #2C3E50;
     flex: 2;
     color: white;
-    margin-top: -150px; }
+    margin-top: -400px; }
+
+#contact-me {
+  background-color: #2C3E50;
+  height: 100vh;
+  margin-top: 50px;
+  position: relative; }
+  #contact-me a {
+    text-decoration: none;
+    color: #2C3E50;
+    width: 250px;
+    height: 100px;
+    text-align: center;
+    line-height: 100px;
+    background-color: ghostwhite;
+    border-radius: 5px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
 
 @media screen and (max-width: 1024px) {
   .section-title {
