--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -342,10 +342,11 @@ header
       .project-img
         order: 1
   #skills-section
+    margin-top: 50px
     .skills-container
       flex-direction: column
       .backend, .front-end, .other
-        margin: 0
+        margin: 50px 0
         -webkit-border-radius: 0
         -moz-border-radius: 0
         border-radius: 0
