--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -138,8 +138,13 @@ header
   margin: 50px auto
 
   h1
+    font-size: 3em
     margin-bottom: 20px
     color: $primary
+    text-transform: uppercase
+    letter-spacing: 3px
+  p
+    font-size: 20px
 
 .buttons
   width: 50%
